@@ -2,7 +2,7 @@ This is the Atomsk package.
 
 Atomsk stands for Atom/Molecule/Material Software Kit.
 
-http://atomsk.univ-lille.fr/
+https://atomsk.univ-lille.fr/
 
 PURPOSE:
 ========
