@@ -154,21 +154,21 @@ IF(helpsection=="modes" .OR. helpsection=="create") THEN
   WRITE(*,*) "                            <structure> | N.lattice cst. | N.at.sp."
   WRITE(*,*) "                           -------------+----------------+----------"
   WRITE(*,*) "             KUBISCHE               sc  |       1        |     1"
-  WRITE(*,*) "             GITTER                bcc  |       1        |   1 o. 2"
-  WRITE(*,*) "                                   fcc  |       1        |   1 o. 2"
-  WRITE(*,*) "                               diamond  |       1        |   1 o. 2"
+  WRITE(*,*) "             GITTER                bcc  |       1        | 1 oder 2"
+  WRITE(*,*) "                                   fcc  |       1        | 1 oder 2"
+  WRITE(*,*) "                               diamond  |       1        | 1 oder 2"
   WRITE(*,*) "                                  L1_2  |       1        |     2"
   WRITE(*,*) "                              fluorite  |       1        |     2"
   WRITE(*,*) "                             rock-salt  |       1        |     2"
   WRITE(*,*) "                            perovskite  |       1        |     3"
   WRITE(*,*) "                           -------------+----------------+----------"
-  WRITE(*,*) "             TETRAGONALE            st  |  2 (a und c)   |   1 o. 2"
-  WRITE(*,*) "             GITTER                bct  |  2 (a und c)   |   1 o. 2"
-  WRITE(*,*) "                                   fct  |  2 (a und c)   |   1 o. 2"
+  WRITE(*,*) "             TETRAGONALE            st  |  2 (a und c)   | 1 oder 2"
+  WRITE(*,*) "             GITTER                bct  |  2 (a und c)   | 1 oder 2"
+  WRITE(*,*) "                                   fct  |  2 (a und c)   | 1 oder 2"
   WRITE(*,*) "                           -------------+----------------+----------"
-  WRITE(*,*) "             HEXAGONALE            hcp  |  2 (a und c)   |   1 o. 2"
+  WRITE(*,*) "             HEXAGONALE            hcp  |  2 (a und c)   | 1 oder 2"
   WRITE(*,*) "             GITTER           wurtzite  |  2 (a und c)   |     2"
-  WRITE(*,*) "                              graphite  |  2 (a und c)   |   1 o. 2"
+  WRITE(*,*) "                              graphite  |  2 (a und c)   | 1 oder 2"
   WRITE(*,*) "                                   L14  |  2 (a und c)   |     2"
   WRITE(*,*) "          atomsk --create nanotube <a> <m> <n> <sp1> [<sp2>] [options] <outputfile> [<formats>]"
 ENDIF
@@ -459,8 +459,8 @@ WRITE(*,*) "        (2) nur im ein-in-alle Modus."
 ENDIF
 !
 WRITE(*,*) ""
-WRITE(*,*) ">>> Schau im mitgelieferten /doc Ordner nach oder "
-WRITE(*,*) "    besuche: http://atomsk.univ-lille.fr/"
+WRITE(*,*) ">>> Schau im mitgelieferten /doc/ Ordner nach oder "
+WRITE(*,*) "    besuche: https://atomsk.univ-lille.fr/"
 WRITE(*,*) ""
 !
 !
