@@ -4,7 +4,7 @@ CHANGELOG FOR ATOMSK
 
 Master (development)
 --------------------
-- parts of the code were parallelized with OpenMP. Thanks to Jian-Hui Zhai, University of Lille, France, for initiating this speeding up of Atomsk.
+- parts of the code were parallelized with OpenMP, in particular: neighbor search; options "-orthogonal-cell", "-select stl"; modes "--density", "--edm", "--polycrystal", "--rdf". Thanks to Jian-Hui Zhai, University of Lille, France, for initiating this speeding up of Atomsk.
 - added support for reading and writing files in BOPfox format (*.bx). Thanks to Matous Mrovec, ICAMS, Bochum University, Germany, for implementing this feature.
 - added support for reading and writing files in Comma-Separated Values format (*.csv).
 - added support for reading and writing files in CRYSTAL format (*.d12).
@@ -26,6 +26,7 @@ Master (development)
 - new module to evaluate mathematical expressions and convert them into real numbers. It supports common mathematical functions like abs, sqrt, trigonometric functions, and so on. This module lifts the previous limitation on expressions as function of box coordinates (previously, only one operation could be used, like "0.5*box" or "box-20"); now more complex expressions can be used, like "0.5*box+0.6".
 - improved checking of number of atoms and memory allocations.
 - fixed a bug in the symmetry operations of space group 166 (R-3m).
+- fixed a bug when reading LAMMPS data files where the atom charges were not read.
 - fixed a bug when writing LAMMPS data files (*.lmp): if atom types were defined, the types written in the "Masses" section did not match the atom types used in the "Atoms" section.
 - fixed a bug when reading Quantum Espresso output files (*.out) in mode "--one-in-all".
 - fixed a bug in option "-dislocation" where the theoretical stresses were not correct when using anisotropic elasticity. Thanks to Min Shi, University of Minnesotta, USA, for pointing out this bug.
